# alfred

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  DOCKER.md  Makefile  PLANS.md  README.md  TODOS.md  alembic.ini  check_oauth_config.py  clear_credentials.py  docker-compose.yml  dump.rdb  langgraph.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  test_google_integration.py
.claude/: local-dev-shared.md  local-dev-solution-a.md  local-dev-solution-b.md  local-dev-solution-c.md  routes-flowchart.excalidraw
.claude/docs/: 2026-03-31-inline-ai-plan.md  2026-03-31-notion-style-inline-ai-design.md
.claude/misc-notes/: test-extraction-local.md
.claude/planning-docs/: RAILS_AUDIT_REPORT.md
.github/workflows/: ci.yml
.tmp/: plan-body.md  realtime_glassdoor_data.yaml
apps/: sitecustomize.py
apps/alfred/: .env.example  Dockerfile  celery_app.py  main.py  requirements.txt  search_gateway.py
apps/alfred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/: .env.example  celery_app.py  main.py  requirements.txt
crew/: __init__.py  runtime.py
docs/: ai_whiteboard_design.md  prompting.md  system_design_v2_technical_design.md
extensions/chrome/: README.md  api.js  background.js  content.js  dashboard.css  dashboard.html  dashboard.js  extract.js  manifest.json  popup.css  popup.html  popup.js  sidepanel.css  sidepanel.html  sidepanel.js  tracker.js  widget.css
frontend/: .dockerignore  .prettierignore  README.md  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs
frontend/app/: layout.tsx  not-found.tsx  providers.tsx
frontend/components/: app-command-palette.tsx  app-navigation-menu.tsx  app-sidebar.tsx  calendar-01.tsx  company-research-history-sheet.tsx  follow-up-center-sheet.tsx  (+4 more)
infra/: docker-compose.expose.yml  docker-compose.yml
notebooks/: langsearch.ipynb  notion.ipynb  openai-agents.ipynb  search_cache.json
scripts/: _bootstrap.py  alembic_autogen.sh  backfill_zettels_qdrant.py  bytecode_artifacts.py  check_agno_env.py  check_env_access.py  check_env_example_parity.py  check_no_bytecode.py  check_notion_history.py  cleanup_bytecode.py  demo_agno_tools.py  example_chunk_pipeline.py  generate_document_images.py  get_company_research_reports.py  ingest.py  ingest_crawl4ai.py  llm_smoke.py  migrate_neon_to_local.sh  migrate_today_todos_to_tasks.py  mind_palace_migrate.py  test_airtable_connection.py  test_knowledge.py  test_linear_connection.py  test_mongo_connection.py  test_notion_endpoints.sh  test_slack_connection.py
tests/: conftest.py  test_crypto.py  test_google_oauth_session.py  test_interview_detection.py  test_interviews_unified.py  test_interviews_unified_async.py  test_llm_factory.py  test_notion_api.py  test_notion_markdown.py  test_personal_brand.py  test_semantic_cache.py  test_writing_api.py
web/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json
(+1550 files in other folders)
