[project]
name = "alfred"
version = "0.1.0"
description = "Alfred assistant FastAPI service"
requires-python = "~=3.11.0"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "python-dotenv>=1.0,<2.0",
    "tenacity>=8.5,<9",
    "notion-client>=2.2,<3",
    "pydantic-settings>=2.4,<3",
    "langchain>=0.3.0,<0.4",
    "langchain-community>=0.3.0,<0.4",
    "langgraph>=0.3.18,<0.5",
    "dspy-ai>=2,<3",
    "langchain-openai>=0.2.0,<0.3",
    "langchain-ollama>=0.2,<0.3",
    "langchain-qdrant>=0.1.4,<0.2",
    "langchain-chroma>=0.1.4,<0.2",
    "qdrant-client>=1.9,<2",
    "chromadb>=0.5.15,<0.6",
    "psycopg[binary]>=3.1,<4",
    "slack_sdk>=3.30,<4",
    "duckduckgo-search>=6.1,<7",
    "wikipedia>=1.4,<2",
    "beautifulsoup4>=4.12,<5",
    "celery>=5.4,<6",
    "redis>=5.0,<6",
    "sqladmin>=0.22,<0.23",
    "google-auth>=2.34,<3",
    "google-auth-oauthlib>=1.2,<2",
    "google-api-python-client>=2.139,<3",
    "python-multipart>=0.0.21,<0.0.22",
    "httpx>=0.27,<0.28",
    "playwright>=1.46,<2",
    "readability-lxml>=0.8,<1",
    "trafilatura>=1.12,<2",
    "tiktoken>=0.7,<0.8",
    "openai>=1.0",
    "ollama>=0.3,<0.4",
    "anthropic>=0.34,<0.35",
    "python-dateutil>=2.9,<3",
    "pytz>=2024.1",
    "tinydb>=4.8,<5",
    "langchain-tavily>=0.2.13",
    "ddgs>=9.5.5",
    "lancedb>=0.1",
    "mlflow>=2.0",
    "sqlmodel>=0.0.21,<0.1",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.23,<0.24",
    "ruff>=0.6,<0.7",
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["apps"]
include = ["alfred*"]

[tool.setuptools.package-dir]
"" = "apps"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
